--- a/src/yield-link-frontend/package.json
+++ b/src/yield-link-frontend/package.json
@@ -9,6 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dfinity/agent": "^3.2.4",
+    "@dfinity/auth-client": "^3.2.4",
+    "@dfinity/candid": "^3.2.4",
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -49,6 +52,8 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.12",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
     "react": "^18",
